# nestquest

./: pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  openapi.json  types.ts
frontend/src/components/: PropertyForm.tsx  PropertyItem.tsx  PropertyList.tsx
nestquest/: crudA.py  main.py  models.py  schemasA.py
tests/: homes_a.csv
